# detecting-notational-errors-in-digital-music-scores

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: cli.py  cli_utils.py  contextual_errors_checker.py  contextual_errors_utils.py  individual_errors_checker.py
